# bevy-tank-game

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html  wasm.mjs
assets/models/tank/: CompleteLevelArt.gltf  CompleteTank.gltf  _Complete-Game.gltf  bullet.gltf
examples/: physics_engine.rs
src/: main.rs
src/plugins/: mod.rs
src/plugins/first_person_camera/: components.rs  mod.rs  resources.rs  systems.rs
src/plugins/scene/: components.rs  mod.rs  systems.rs
src/plugins/tank/: components.rs  mod.rs  resources.rs  systems.rs
wasm/: index.d.ts  index.js  index_bg.wasm.d.ts
