[package]
name = "bevy-tank-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.1"
bevy_egui = "0.21"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }
